--- a/mandelbulber2/formula/ui/transf_add_spherical_invert.ui
+++ b/mandelbulber2/formula/ui/transf_add_spherical_invert.ui
@@ -44,11 +44,53 @@
     </widget>
    </item>
    <item>
-    <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
-     <property name="text">
-      <string>dot -&gt; length</string>
+    <layout class="QGridLayout" name="gridLayout_6" columnstretch="0,1">
+     <property name="spacing">
+      <number>2</number>
      </property>
-    </widget>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_178">
+       <property name="text">
+        <string>mix:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleA_1">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="prefix">
+        <string/>
+       </property>
+       <property name="suffix">
+        <string/>
+       </property>
+       <property name="decimals">
+        <number>6</number>
+       </property>
+       <property name="minimum">
+        <double>-36000.000000000000000</double>
+       </property>
+       <property name="maximum">
+        <double>36000.000000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>0.100000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0" colspan="2">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
+       <property name="text">
+        <string>dot -&gt; length</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout_15" columnstretch="0,0,1">
@@ -58,7 +100,7 @@
      <item row="0" column="0" rowspan="3">
       <widget class="QLabel" name="label_264">
        <property name="text">
-        <string>axx
+        <string>axis
 scales</string>
        </property>
       </widget>
