--- a/mandelbulber2/formula/ui/transf_sincos_helix.ui
+++ b/mandelbulber2/formula/ui/transf_sincos_helix.ui
@@ -522,7 +522,7 @@
       </font>
      </property>
      <property name="text">
-      <string>sw</string>
+      <string>swap xy</string>
      </property>
     </widget>
    </item>
@@ -538,7 +538,7 @@
       </font>
      </property>
      <property name="text">
-      <string>s</string>
+      <string>swap xz</string>
      </property>
     </widget>
    </item>
@@ -564,11 +564,11 @@
        <number>2</number>
       </property>
       <item>
-       <layout class="QGridLayout" name="gridLayout_83">
+       <layout class="QGridLayout" name="gridLayout_59" columnstretch="0,1">
         <property name="spacing">
          <number>2</number>
         </property>
-        <item row="3" column="0">
+        <item row="0" column="0">
          <widget class="MyCheckBox" name="checkBox_transf_function_enabledO_false">
           <property name="enabled">
            <bool>true</bool>
@@ -584,7 +584,23 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="1">
+        <item row="1" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledT_false">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="text">
+           <string>radius</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
          <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleA_1">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -612,7 +628,7 @@
           </property>
          </widget>
         </item>
-        <item row="4" column="1">
+        <item row="1" column="1">
          <widget class="MyDoubleSpinBox" name="spinbox_transf_radius_1">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -637,22 +653,6 @@
           </property>
           <property name="singleStep">
            <double>0.100000000000000</double>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledT_false">
-          <property name="enabled">
-           <bool>true</bool>
-          </property>
-          <property name="font">
-           <font>
-            <weight>50</weight>
-            <bold>false</bold>
-           </font>
-          </property>
-          <property name="text">
-           <string>radius</string>
           </property>
          </widget>
         </item>
