--- a/mandelbulber2/qt/dock_fractal.ui
+++ b/mandelbulber2/qt/dock_fractal.ui
@@ -35,7 +35,7 @@
       <enum>QTabWidget::West</enum>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>3</number>
      </property>
      <property name="documentMode">
       <bool>false</bool>
@@ -156,8 +156,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>370</width>
-                <height>799</height>
+                <width>372</width>
+                <height>802</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_1" stretch="1,0">
@@ -225,8 +225,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>370</width>
-                <height>799</height>
+                <width>96</width>
+                <height>26</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_3">
@@ -284,8 +284,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>370</width>
-                <height>799</height>
+                <width>96</width>
+                <height>26</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_4">
@@ -343,8 +343,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>370</width>
-                <height>799</height>
+                <width>96</width>
+                <height>26</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_5">
@@ -402,8 +402,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>370</width>
-                <height>799</height>
+                <width>96</width>
+                <height>26</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_6">
@@ -461,8 +461,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>370</width>
-                <height>799</height>
+                <width>96</width>
+                <height>26</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_7">
@@ -520,8 +520,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>370</width>
-                <height>799</height>
+                <width>96</width>
+                <height>26</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_8">
@@ -579,8 +579,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>370</width>
-                <height>799</height>
+                <width>96</width>
+                <height>26</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_9">
@@ -638,8 +638,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>370</width>
-                <height>799</height>
+                <width>96</width>
+                <height>26</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_10">
@@ -746,8 +746,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>364</width>
-            <height>942</height>
+            <width>276</width>
+            <height>857</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_68">
@@ -2282,8 +2282,8 @@ distance estimation)</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>378</width>
-            <height>853</height>
+            <width>380</width>
+            <height>851</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_74">
@@ -2746,6 +2746,9 @@ with visible shadows of fractal objects</string>
             </widget>
            </item>
            <item>
+            <widget class="cPrimitivesManager" name="widgetPrimitivesManager" native="true"/>
+           </item>
+           <item>
             <layout class="QVBoxLayout" name="verticalLayout_primitives">
              <property name="spacing">
               <number>2</number>
@@ -2892,6 +2895,12 @@ with visible shadows of fractal objects</string>
    <class>cTabFractal</class>
    <extends>QWidget</extends>
    <header>tab_fractal.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>cPrimitivesManager</class>
+   <extends>QWidget</extends>
+   <header>primitives_manager.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
